<resources>
    <string name="pupils_title">Pupils</string>
    <string name="pupils_a">Pupils, while small, can provide the examiner with a wide variety of information. There is a unique pathway between the two eyes and the brain which results in synchronous responses of the pupils under normal conditions. Many neuro-ophthalmological disorders can presents with ansicora (difference in pupil size).</string>
    <string name="pupils_b">Tip: avoid dilating pupils until the pupil assessment is completed. Once dilated, you will not be able to assess for pupil function until the drops wear off.</string>
    <string name="pupils_d">Afferent pathway – optic nerves through optic tract into visual cortex
\nEfferent pathway – PNS and SNS input to iris muscles</string>
    <string name="pupils_e">PNS pathway: light shone to one eye, information relayed through optic nerve (pupillary fibers), decussate at chiasm and enter midbrain, result in constriction of both pupils.</string>
    <string name="pupils_f">SNS pathway: pain and fear = pupillary dilation bilaterally.</string>
    <string name="pupils_g">Near Reflex pathway: pupillary constriction when patient is focusing on something near</string>
    <string name="pupils_h">Pupils are controlled by 2 muscles, the sphincter muscle and the dilator muscle.
        \n\t- Sphincter muscle supplied by cholinergic fibers and \n\tPNS (Cranial nerve 3)
        \n\t- Pupillary dilator supplied by adrenergic fibers of SNS</string>
    <string name="pupils_i">Tip – have patient fixate on object in distance to minimize accommodation and miosis</string>
    <string name="pupils_j">Size (mm)</string>
    <string name="pupils_k">Tip: Any difference >2mm is a pathological anisocoria (this looks at the efferent pathway). Physiologic aniscoria is when difference in pupil size is 1mm and is the same in dim and light conditions. In physiologic aniscoria the pupillary reflexes are intact and brisk.</string>
    <string name="pupils_l">Shape</string>
    <string name="pupils_m">Light reflex: (direct and consentual)</string>
    <string name="pupils_n">Consensual Reflex: ask patient to fixate on a target in the distance. Light is shone on the pupil and the reaction of the other pupil is observed. This will normally be brisk constriction of the non-illuminated pupil due to the pupillary pathway.</string>
    <string name="pupils_o">Swinging Flashlight test</string>
    <string name="pupils_p">Tip: a positive RAPD indicates a unilateral or asymmetric damage in the visual pathway. A negative RAPD may indicate symmetric disturbance (or a normal exam).</string>
    <string name="pupils_q">Reverse RAPD: done if there is only one normal pupil. Continue with the swinging flashlight test, however only look at the one pupil to see if there are any signs of dilation.</string>
    <string name="pupils_r">Near Reflex Test</string>
    <string name="pupils_s">Tip: the pupillary near reflex should be normal if the light reflex is normal, but the opposite is not true.</string>
    <string name="pupils_t">Light Near Dissociation</string>
    <string name="pupils_u">Figure 5: Afferent and efferent pupillary pathways.</string>
    <string name="pupils_v">Measure pupil size in mm in both bright and dim settings (this is important if the patient has anisocoria). Examiner can use a ruler or pupilometer to do so.</string>
    <string name="pupils_w">Direct reflex: ask patient to fixate on a target in the distance. Light is shone on the pupil and the reaction in that pupil in observed. Normal reaction would be brisk constriction.</string>
    <string name="pupils_x">Assess the shape of both pupils. Are they round and circular, any signs of irregularities should be further explored (synechiae, traumatic mydriasis).</string>
    <string name="pupils_y">Tip: shine light from temporal region inwards to avoid illuminating pupils beforehand</string>
    <string name="pupils_z">Testing for an RAPD (relative afferent pupillary defect). Examiner briskly shines light from one eye to the other (crossing the midline moving back and forth). A normal response is for the pupils to constrict and remain so as the light moves back and forth between the two eyes. If one pupil dilates and then constricts as the light is moved, that is a relative afferent pupillary defect.</string>
    <string name="pupils_aa">Have the person look at a near target, the following responses should be observed
        \n\t- Accommodation (change in lens shape)
        \n\t- Convergence (eyes moving towards each other)
        \n\t- Miosis (decrease in pupil size)</string>
    <string name="pupils_bb">\t- When the pupillary reflex is significantly better than light reflex</string>
    <string name="anterior_title">Anterior Segment</string>
    <string name="anterior_a">Figure 14: Documentation of a systemic anterior and posterior examination assessment.</string>
    <string name="anterior_b">A systematic approach to the anterior segment exam on slit-lamp is imperative to avoid missing certain findings. Generally, practitioners work from the outside in. Below is a systematic approach to an anterior segment examination.</string>
    <string name="anterior_d">Look at the patient for any gross deficits. Assess for any head turn of the patient.</string>
    <string name="anterior_e">Lids, Lashes, Lacrimal, Lymph nodes</string>
    <string name="anterior_f">Look at the external and internal aspects of the lids, test the lacrimal system function</string>
    <string name="anterior_g">Sclera and Conjunctiva</string>
    <string name="anterior_h">At this point also assess the tear film.</string>
    <string name="anterior_i">Cornea</string>
    <string name="anterior_j">Assess the five layers of the cornea.</string>
    <string name="anterior_k">Anterior chamber</string>
    <string name="anterior_l">Cells, flare, hyphema. Assess the angle via gonioscopy or assessment by the van Herick Method.</string>
    <string name="anterior_m">Iris</string>
    <string name="anterior_n">Trans illumination defects, color, pigment, neovascularization.</string>
    <string name="anterior_o">Lens</string>
    <string name="anterior_p">Clarity, dislocation, cataracts that impair vision, IOL</string>
    <string name="anterior_q">Vitreous</string>
    <string name="anterior_r">Hemorrhages, floaters, Weiss ring.</string>
    <string name="anterior_s">Refer to following video for thorough anterior segment slit lamp examination.
https://www.youtube.com/watch?v=w9wMJ6job_0</string>
    <string name="posterior_title">Posterior Segment</string>
    <string name="posterior_a">Slit lamp microscopy can be used to assess the posterior segment of the eye. An additional 60D or 90D lens will be required for this. Additionally, indirect ophthalmoscopy can also be used to assess the posterior structures.</string>
    <string name="posterior_b">TIP: Make sure you finish the anterior segment and pupillary assessment before dilating the patient. Once the patient is dilated, you no longer can test for pupil function (which is one of the most important parts of a neuro ophthalmological assessment).</string>
    <string name="posterior_d">Macula</string>
    <string name="posterior_e">Area surround the fovea, assess for light reflex, the topography of the area (flat or raised)</string>
    <string name="posterior_f">Vessels</string>
    <string name="posterior_g">Follow retinal vessels, look for any signs of hemorrhages, AV nicking, attenuation of arterioles and veins. Assess for any signs of CRAVO, or BRVO.</string>
    <string name="posterior_h">Periphery</string>
    <string name="posterior_i">Ensure you look at the entire 360 degree view of the retina. Ensure there are no holes, tears, any other malformations that may be causing the patients symptoms. A thorough retinal exam is key to avoid missing important findings</string>
    <string name="posterior_j">Disk</string>
    <string name="posterior_k">This is very important in an neuro ophthalmology exam. Locate and examine the disk, note the cup to disk ratio. Note the color and contour of the disk. Look for any signs of papilledema. Signs of optic disc atrophy?</string>
    <string name="cranial_title">Cranial Nerves</string>
    <string name="cranial_a">CN1 Olfactory:</string>
    <string name="cranial_b">Test patients ability to smell.</string>
    <string name="cranial_d">Tested via visual acuity and pupillary assessment.</string>
    <string name="cranial_e">CN3 Oculomotor Nerve:</string>
    <string name="cranial_f">Innervates levator palpebrae superioris, superior rectus, medial rectus, inferior rectus, inferior oblique, sphincter of pupil. This nerve is tested during EOM testing and pupillary testing (constriction of pupil).</string>
    <string name="cranial_g">CN4 Trochlear Nerve</string>
    <string name="cranial_h">Innervates superior oblique muscle (depresses, abduct and intorts eyeball).</string>
    <string name="cranial_i">CN5 Trigeminal Nerve</string>
    <string name="cranial_j">Sensation over face and innervates the muscles of mastication. Test V1,V2,V3 branch distributions by light touch while patients eyes are closed. Ensure sensation is equal bilaterally.
To test the muscles of mastication, have the patient bite down and feel for master muscle function on the sides of the jaw.</string>
    <string name="cranial_k">Figure 15: V1, V2, V3 sensory distributions of the trigeminal nerve.</string>
    <string name="cranial_l">CN6 Abducens Nerve</string>
    <string name="cranial_m">Innervates lateral rectus (abducts the eye). This function will be assessed during EOM testing.</string>
    <string name="cranial_n">CN7 Facial Nerve</string>
    <string name="cranial_o">The facial nerve innervates the muscles of facial expression, as well as the lacrimal gland. More specifically for our purposes, the facial nerve supplies the orbicularis oculi. This can be checked by the strength of the lid closure.</string>
    <string name="cranial_p">CN8 Vestibulocochlear Nerve</string>
    <string name="cranial_q">Test patients hearing bilaterally.</string>
    <string name="cranial_r">CN9 and CN10 Glossopharyngeal and Vagus Nerve</string>
    <string name="cranial_s">Ask patient to swallow and assess function. Then ask patient to open their mouth and say “Ahh” and observe for equal rising of the palate.</string>
    <string name="cranial_t">CN 11 Accessory Nerve</string>
    <string name="cranial_u">Controls the sternocleidomastoid and trapezius. Have patient shrug their shoulders up against resistance provided by the examiner down. Then have the patient turn the head to the left while the examiner tries to rotate head back to midline by pushing on the left jaw. Test to make sure the patient is able to hold the position against resistance. Repeat for the right side.</string>
    <string name="cranial_v">CN 12 Hypoglossal Nerve</string>
    <string name="cranial_w">Provides motor innervation to the tongue. Test by having the patient move their tongue left, right, up and down.</string>
    <string name="cranial_x">CN 2 Optic Nerve:</string>
    <string name="unilateral_d">Sudden</string>
    <string name="unilateral_h">TIP: Ensure the patient’s visual loss is permanent and not transient. Transient visual loss has a different differential diagnosis.</string>
    <string name="unilateral_i">Table 1: Common causes of transient vision loss</string>
    <string name="unilateral_j">There are two very important processes to consider with unilateral vision loss that occurs suddenly.</string>
    <string name="unilateral_k">Ischemic</string>
    <string name="unilateral_l">Non-Ischemic</string>
    <string name="non_ischemic">ie other causes</string>
    <string name="ischemic">Vasculopathic Risk Factors?
Assess for a history of: diabetes, hypertension, elevated cholesterol, cardiac disease (MI/CHF), previous history of a stroke or TIA. Does the patient smoke, drink ETOH or have poor dietary habits?</string>
</resources>