<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_title"
        style="@style/pe_title"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="700dp"
        android:src="@drawable/slitlamp_exam_note"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_a"
        style="@style/pe_figure"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_b"
        style="@style/pe_paragraph"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_d"
        style="@style/pe_paragraph"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_e"
        style="@style/pe_subheading"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_f"
        style="@style/pe_paragraph"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_g"
        style="@style/pe_subheading"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_h"
        style="@style/pe_paragraph"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_i"
        style="@style/pe_subheading" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_j"
        style="@style/pe_paragraph"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_k"
        style="@style/pe_subheading"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_l"
        style="@style/pe_paragraph"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_m"
        style="@style/pe_subheading"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_n"
        style="@style/pe_paragraph"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_o"
        style="@style/pe_subheading"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_p"
        style="@style/pe_paragraph"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_q"
        style="@style/pe_subheading"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_r"
        style="@style/pe_paragraph"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anterior_s"
        style="@style/pe_paragraph"
        />


</LinearLayout>
</ScrollView>